[Mac] Ensure bookmark button title elides correctly

Currently, when drawing the title of a bookmark button cell in LTR,
we adjust the origin to account for the image and padding, but not
the width, causing it to stick out slightly from the trailing edge
of the cell, where it's clipped to bounds.

This can cause titles that are just slightly too big to fit into the
cell to fail to elide with an ellipsis. Since the title is clipped to
the cell's bounds, this causes an ugly hard clip (see attached bug).

This change ensures that the title is drawn within the cell's bounds.

Bug: 782537
Change-Id: Ib6ae555588d47361661d543e358805f93ba4fede